# nixpkg-mcp-agent-mail-rust

./: README.md  flake.nix
asupersync/: .gitignore  .rchignore  .stub-allowlist.txt  AGENTS.md  CHANGELOG.md  Cargo.toml  MODES_OF_REASONING_REPORT_AND_ANALYSIS_OF_PROJECT.md  MODE_OUTPUT_A3.md  MODE_OUTPUT_B6.md  MODE_OUTPUT_B9.md  MODE_OUTPUT_F3.md  MODE_OUTPUT_F4.md  MODE_OUTPUT_F7.md  MODE_OUTPUT_H2.md  MODE_OUTPUT_I4.md  MODE_OUTPUT_L2.md  MODE_OUTPUT_L5.md  PROPOSAL_TO_INTEGRATE_IDEAS_FROM_NATS_INTO_ASUPERSYNC.md  PROPOSAL_TO_INTEGRATE_IDEAS_FROM_NATS_INTO_ASUPERSYNC__AFTER_FEEDBACK.md  README.md  TESTING.md  asupersync_web_demo.html  audit_index.jsonl  claude-upgrade-progress.json  codebase_audit_summary_20260316.md  system_architecture_deep_dive_20260318.md  tracing_system_review_20260318.md
asupersync/asupersync-browser-core/: Cargo.toml
asupersync/asupersync-browser-core/src/: exports.rs  lib.rs
asupersync/asupersync-browser-core/tests/: abi_exports.rs  artifact_layout.rs
asupersync/asupersync-macros/: Cargo.toml
asupersync/asupersync-macros/src/: join.rs  lib.rs  race.rs  scope.rs  session.rs  spawn.rs
asupersync/asupersync-macros/tests/: macro_spawn_closure.rs
asupersync/asupersync-tokio-compat/: Cargo.toml
asupersync/asupersync-tokio-compat/src/: body_bridge.rs  io.rs  runtime.rs  tower_bridge.rs
asupersync/asupersync-wasm/: Cargo.toml
asupersync/asupersync-wasm/src/: error.rs  exports.rs  lib.rs  types.rs
asupersync/conformance/: Cargo.toml
asupersync/conformance/src/: logging.rs  runner.rs
asupersync/drop_unwrap_finder/: Cargo.toml
asupersync/drop_unwrap_finder/src/: main.rs
asupersync/franken_decision/src/: lib.rs
asupersync/franken_evidence/src/: lib.rs
asupersync/frankenlab/: Cargo.toml
asupersync/frankenlab/src/: main.rs
asupersync/src/: actor.rs  app.rs  config.rs  console.rs  decoding.rs  epoch.rs  evidence.rs  gen_server.rs  lib.rs  link.rs  monitor.rs  process.rs  remote.rs  session.rs  supervision.rs  test_utils.rs
asupersync/src/audit/: ambient.rs
asupersync/src/cancel/: progress_certificate.rs  symbol_cancel.rs
asupersync/src/channel/: broadcast.rs  deadlock_test.rs  fault.rs  mpsc.rs  oneshot.rs  session.rs  watch.rs
asupersync/src/cli/: args.rs  completion.rs  error.rs  exit.rs  mod.rs  output.rs  progress.rs
asupersync/src/codec/: framed.rs  framed_read.rs  framed_write.rs  lines.rs
asupersync/src/combinator/: bulkhead.rs  circuit_breaker.rs  hedge.rs  join.rs  laws.rs  quorum.rs  race.rs  rate_limit.rs  retry.rs  select.rs  timeout.rs
asupersync/src/conformance/: mod.rs
asupersync/src/cx/: cx.rs  registry.rs  scope.rs  wrappers.rs
asupersync/src/database/: mysql.rs  pool.rs  postgres.rs  sqlite.rs  transaction.rs
asupersync/src/distributed/: bridge.rs  encoding.rs  recovery.rs  snapshot.rs  tests.rs
asupersync/src/error/: recovery.rs
asupersync/src/fs/: buf_writer.rs  metadata.rs  uring.rs  vfs.rs
asupersync/src/grpc/: client.rs  codec.rs  health.rs  interceptor.rs  mod.rs  protobuf.rs  server.rs  streaming.rs  web.rs
asupersync/src/http/: body.rs  compress.rs  h3_native.rs  mod.rs  pool.rs
asupersync/src/io/: browser_storage.rs  browser_stream.rs  buf_reader.rs  buf_writer.rs  copy.rs  lines.rs  read.rs  read_buf.rs  (+4 more)
frankensearch/: Cargo.toml  UPGRADE_LOG.md  uninstall.sh
frankensearch/.rch/: config.toml
frankensearch/crates/: fastembed_embedder.rs  lib.rs
frankensearch/schemas/: fsfs-packaging-release-install-v1.schema.json
frankensearch/scripts/: check_bead_test_matrix.sh  check_dependency_semantics.sh  check_fsfs_packaging_release_install_contract.sh  rch-ensure-deps.sh
frankentui/: EXISTING_TUI_INSPECTOR_STRUCTURE.md  FEATURE_PARITY.md  PLAN_TO_CREATE_FRANKENTUI__CODEX.md  PLAN_TO_PORT_TUI_INSPECTOR_TO_RUST.md  PROPOSED_ARCHITECTURE.md  fix_mouse.py  vfx_harness.jsonl
nix/: package-manifest.json  package.nix
scripts/: sync-from-upstream.sh
upstream/: .gitignore  AGENT_MAIL_RUST_VERSION_REPO_TRANSITION_PLAN.md  CHANGELOG.md  CONTEXT_SETUP_LOG.md  Cargo.toml  EXISTING_MCP_AGENT_MAIL_STRUCTURE.md  FEATURE_PARITY.md  INTRODUCTION.md  PROPOSED_ARCHITECTURE.md  SYNC_STRATEGY.md  TODO.md  TODO_AGENT_MAIL_RUST_TRANSITION_EXECUTION.md  UPGRADE_LOG.md  VISION.md  beads_import.md  beads_test_coverage.md  factory.mcp.json.template  install.ps1  install.sh  register_gemini.sh
upstream/.cargo/: config.toml
upstream/benches/: BUDGETS.md
upstream/crates/mcp-agent-mail-agent-detect/: Cargo.toml
upstream/crates/mcp-agent-mail-conformance/: Cargo.toml
upstream/crates/mcp-agent-mail-conformance/src/: main.rs
upstream/crates/mcp-agent-mail-conformance/tests/: contact_enforcement_outage.rs  error_code_parity.rs  resource_description_parity.rs
upstream/crates/mcp-agent-mail-conformance/tests/conformance/: README.md
upstream/crates/mcp-agent-mail-conformance/tests/conformance/fixtures/: python_reference.json
upstream/crates/mcp-agent-mail-conformance/tests/conformance/fixtures/cli/: legacy_cli_inventory.json
upstream/crates/mcp-agent-mail-conformance/tests/conformance/fixtures/share/: README.md  expected_archive.json  expected_fts_ddl.sql  expected_scoped.json  expected_standard.json  expected_strict.json  expected_views_ddl.sql  generate_fixtures_standalone.py  generate_share_fixtures.py  source_db_hashes.json
upstream/crates/mcp-agent-mail-conformance/tests/conformance/fixtures/tool_filter/: cases.json  custom_filter.json  profiles.json
upstream/crates/mcp-agent-mail-search-core/: Cargo.toml
upstream/crates/mcp-agent-mail-search-core/src/: auto_init.rs  canonical.rs  diversity.rs  document.rs  embedder.rs  embedding_jobs.rs  envelope.rs  error.rs  fastembed.rs  fusion.rs  index_layout.rs  lib.rs  metrics.rs  model2vec.rs  query.rs  results.rs  updater.rs
upstream/crates/mcp-agent-mail-search-core/tests/: fault_injection.rs  parser_filter_fusion_rerank.rs  query_assistance_explain.rs
upstream/crates/mcp-agent-mail-wasm/: Cargo.toml
upstream/crates/mcp-agent-mail-wasm/src/: wasm.rs
upstream/crates/mcp-agent-mail-wasm/www/: index.html  index.js  style.css
(+835 files in other folders)
