[package]
name = "mcp-agent-mail-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Conformance test harness for MCP Agent Mail"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap = { version = "2", features = ["serde"] }
clap.workspace = true
chrono.workspace = true
mcp-agent-mail-server = { path = "../mcp-agent-mail-server" }

[dev-dependencies]
insta = { version = "1.38", features = ["json"] }
fastmcp.workspace = true
fastmcp-core.workspace = true
mcp-agent-mail-core.workspace = true
mcp-agent-mail-db.workspace = true
mcp-agent-mail-storage.workspace = true
mcp-agent-mail-tools.workspace = true
asupersync.workspace = true
tempfile.workspace = true
regex.workspace = true
sha1.workspace = true
